[package]
name = "rgpt"
version = "0.1.0"
authors = ["MH Tsai <mhlabs95@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]

dotenv_codegen = "0.15.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

